fix scrollbar on firefox browser #137

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,7 @@ body {
 }
 
 @-moz-document url-prefix() {
+  body,
   * {
     scrollbar-width: thin;
     scrollbar-color: #7ebc59 #f5f5f5;
